Fixed edition-header h3 spacing

--- a/static/css/components/work.less
+++ b/static/css/components/work.less
@@ -29,7 +29,7 @@
 // Center (editionAbout)
 div.editionAbout {
   margin-bottom: 20px;
-  h3 {
+  h3.edition-header {
     font-size: 14px;
     margin: 0 0 0em;
   }
